[FIX] Dark mode center alignment

--- a/src/style.css
+++ b/src/style.css
@@ -201,12 +201,14 @@ body.mode .country-full {
   text-decoration: none;
   color: #1f2d36;
 
-  display: flex;
-  align-items: center;
-  gap: 1.4rem;
-
   font-size: 1.2rem;
   font-weight: bold;
+}
+.btn--mode span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
 }
 .btn--mode ion-icon {
   font-size: 1.6rem;
